# ares

./: .gitignore  README.md  build.sh  decision.sh  real_launch.sh  sim_launch.sh  virtual_serial.sh
src/rm_decision/: README.md
src/rm_decision/rm_behavior_tree/: CMakeLists.txt  Project.btproj  attack_left.xml  package.xml  rmuc_01.xml  rmul.xml
src/rm_decision/rm_behavior_tree/config/: Project.btproj  attack_right.xml  decision_switch_test.xml  protect_supply.xml  retreat_attack_left.xml  rmul.xml
src/rm_decision/rm_behavior_tree/include/rm_behavior_tree/: bt_conversions.hpp
src/rm_decision/rm_behavior_tree/include/rm_behavior_tree/plugins/action/: get_current_location.hpp  modification_variable.hpp  move_around.hpp  print_message.hpp  robot_control.hpp  send_goal.hpp  sub_all_robot_hp.hpp  sub_armors.hpp  sub_decision_num.hpp  sub_game_status.hpp  sub_robot_status.hpp
src/rm_decision/rm_behavior_tree/include/rm_behavior_tree/plugins/condition/: is_attacked.hpp  is_delay_s.hpp  is_detect_enemy.hpp  is_equal.hpp  is_friend_ok.hpp  is_game_time.hpp  is_outpost_ok.hpp  is_status_ok.hpp
src/rm_decision/rm_behavior_tree/include/rm_behavior_tree/plugins/control/: decision_switch.hpp
src/rm_decision/rm_behavior_tree/include/rm_behavior_tree/plugins/decorator/: rate_controller.hpp
src/rm_decision/rm_behavior_tree/launch/: rm_behavior_tree.launch.py
src/rm_decision/rm_behavior_tree/plugins/action/: get_current_location.cpp  modification_variable.cpp  move_around.cpp  print_message.cpp  robot_control.cpp  send_goal.cpp  sub_all_robot_hp.cpp  sub_armors.cpp  sub_decision_num.cpp  sub_game_status.cpp  sub_robot_status.cpp
src/rm_decision/rm_behavior_tree/plugins/condition/: is_attacked.cpp  is_delay_s.cpp  is_detect_enemy.cpp  is_equal.cpp  is_friend_ok.cpp  is_game_time.cpp  is_outpost_ok.cpp  is_status_ok.cpp
src/rm_decision/rm_behavior_tree/plugins/control/: decision_switch.cpp
src/rm_decision/rm_behavior_tree/plugins/decorator/: rate_controller.cpp
src/rm_decision/rm_behavior_tree/src/: rm_behavior_tree.cpp
src/rm_decision/rm_decision_interfaces/: CMakeLists.txt  README.md  package.xml
src/rm_decision/rm_decision_interfaces/msg/: AllRobotHP.msg  DecisionNum.msg  FriendLocation.msg  GameStatus.msg  RFID.msg  RobotControl.msg  RobotStatus.msg
src/rm_nav/rm_driver/livox_ros_driver2/src/config/: MID360_config.json
src/rm_nav/rm_driver/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_nav/rm_driver/rm_serial_driver/config/: serial_driver.yaml
src/rm_nav/rm_driver/rm_serial_driver/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver.hpp
src/rm_nav/rm_driver/rm_serial_driver/launch/: rm_serial.launch.py  rm_serial_virtual.launch.py
src/rm_nav/rm_driver/rm_serial_driver/src/: crc.cpp  rm_serial_driver.cpp  virtual_serial.cpp
src/rm_nav/rm_localization/FAST_LIO/Log/: mat_pre.txt
src/rm_nav/rm_localization/FAST_LIO/config/: mid360.yaml
src/rm_nav/rm_localization/FAST_LIO/rviz/: fastlio.rviz
src/rm_nav/rm_localization/FAST_LIO/src/: laserMapping.cpp
src/rm_nav/rm_localization/icp_registration/config/: icp.yaml
src/rm_nav/rm_localization/icp_registration/src/: icp_registration.cpp
src/rm_nav/rm_localization/point_lio/config/: mid360.yaml
src/rm_nav/rm_localization/small_gicp_relocalization/: CMakeLists.txt  README.md  package.xml
src/rm_nav/rm_localization/small_gicp_relocalization/.github/workflows/: ci.yml
src/rm_nav/rm_localization/small_gicp_relocalization/include/small_gicp_relocalization/: small_gicp_relocalization.hpp
src/rm_nav/rm_localization/small_gicp_relocalization/launch/: small_gicp_relocalization_launch.py
src/rm_nav/rm_localization/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
src/rm_nav/rm_nav_bringup/config/reality/: icp_registration_real.yaml  segmentation_real.yaml
src/rm_nav/rm_nav_bringup/config/simulation/: segmentation_sim.yaml
src/rm_nav/rm_nav_bringup/launch/: bringup_real.launch.py  bringup_sim.launch.py
src/rm_nav/rm_nav_bringup/urdf/: sentry_robot_sim.xacro
src/rm_nav/rm_navigation/fake_vel_transform/include/fake_vel_transform/: fake_vel_transform.hpp
src/rm_nav/rm_navigation/fake_vel_transform/src/: fake_vel_transform.cpp
src/rm_nav/rm_navigation/pid_follow/: CMakeLists.txt  package.xml
src/rm_nav/rm_navigation/pid_follow/src/: pid_follow_node.cpp
src/rm_nav/rm_navigation/rm_navigation/launch/: nav2_launch.py
src/rm_nav/rm_navigation/rm_navigation/params/: nav2_params.yaml
src/rm_nav/rm_navigation/rm_navigation/rviz/: nav2.rviz
src/rm_nav/rm_perception/filter_pointcloud/: CMakeLists.txt  package.xml
src/rm_nav/rm_perception/filter_pointcloud/config/: filter.yaml  filter_pointcloud.yaml
src/rm_nav/rm_perception/filter_pointcloud/launch/: filter_pointcloud.launch.py
src/rm_nav/rm_perception/filter_pointcloud/src/: filter_pointcloud.cpp
src/rm_nav/rm_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/launch/: segmentation_params.yaml
src/rm_nav/rm_simulation/pb_rm_simulation/rviz/: rviz2.rviz
src/rm_nav/rm_simulation/pb_rm_simulation/urdf/: simulation_waking_robot.xacro
